--- a/src/main/resources/templates/adminDashBoard/fragments/orderDetailsContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/orderDetailsContent.html
@@ -78,7 +78,7 @@
                             </td>
                             <td th:text="${detail.course.price != null ? #numbers.formatDecimal(detail.course.price, 0, 'COMMA', 0, 'POINT') : 'N/A'}"></td>
                             <td th:text="${detail.voucher != null && detail.voucher.discount != null ? #numbers.formatDecimal(detail.voucher.discount, 0, 'COMMA', 0, 'POINT') + '%' : '0%'}"></td>
-                            <td th:text="${detail.unitPrice != null && detail.voucher != null && detail.voucher.discount != null ? #numbers.formatDecimal(detail.unitPrice * (1 - detail.voucher.discount/100), 0, 'COMMA', 0, 'POINT') : #numbers.formatDecimal(detail.unitPrice, 0, 'COMMA', 0, 'POINT')}"></td>
+                            <td th:text="${detail.unitPrice != null && detail.course.discount != null ? #numbers.formatDecimal(detail.unitPrice * (1 - detail.course.discount/100), 0, 'COMMA', 0, 'POINT') : detail.unitPrice}"></td>
                             <td th:text="${detail.course.instructor != null ? detail.course.instructor.fullName : 'N/A'}"></td>
                         </tr>
                         </tbody>
